--- a/projects/myboard/templates/common/base.html
+++ b/projects/myboard/templates/common/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="{% static 'script.js' %}"></script>
 </head>
 <body>
     <!-- 내가 집어넣고싶은 조각(fragment)을 include -->
